tests/loops/valid/while_multi_statement.amu
main() : s32 {
    a:s32 = 0;
    b:s32 = 1;

    while (a < 5) {
        a = a + 2;
        b = b * a;
    }

    return a;
}