tests/loops/invalid/out_of_scope.amu
main() : s32 {

    while (1) {
        a:s32 = 2;
    }

    return a;
}